--- a/MoviesProject2/app/src/main/AndroidManifest.xml
+++ b/MoviesProject2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MoviesProject"
+        android:theme="@style/Theme.ArticleSearch"
         tools:targetApi="31">
+        <!-- Detail Activity -->
+        <activity android:name=".DetailActivity"
+            android:exported="true" />
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
