--- a/MoviesProject2/gradle/wrapper/gradle-wrapper.properties
+++ b/MoviesProject2/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Sep 26 19:49:30 EDT 2024
+#Sun Jul 10 06:22:00 PDT 2022
 distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
-zipStoreBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
